# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "chester"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"
description = ""
repository = "https://github.com/devzbysiu/chester"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
anyhow = "1.0.68"
eventador = "0.0.18"
interprocess = "1.2.1"
log = "0.4.11"
once_cell = "1.17.0"
# TODO: move it back to original implementation after https://github.com/seanmonstar/pretty-env-logger/pull/49 is closed
pretty_env_logger = { git = "https://github.com/complexspaces/pretty-env-logger", branch = "update-env-logger" }
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-forest = "0.1.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
