# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "chester"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"
description = ""
repository = "https://github.com/devzbysiu/chester"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
anyhow = "1.0.68"
dirs = "4.0.0"
eventador = "0.0.18"
hyper = "0.14.24"
hyperlocal = "0.8.0"
log = "0.4.11"
once_cell = "1.17.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros"] }
tracing = "0.1.37"
tracing-forest = "0.1.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
