# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "chester"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"
description = ""
repository = "https://github.com/devzbysiu/chester"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
actix-web = "4.3.0"
anyhow = "1.0.68"
derive_builder = "0.12.0"
dirs = "4.0.0"
eventador = "0.0.18"
hyper = "0.14.24"
log = "0.4.11"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-appender = "0.2.2"
tracing-forest = "0.1.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
fake = "2.5.0"
tempfile = "3.3.0"
cmd_lib = "1.3.0"
